v6.3.3
- Updated - disabled core/cover background styles until we fully remove inline styles
- Updated - Gutenberg inline styles only for core blocks via block support (enable with '__experimentalStyles') to avoid issues with custom blocks
- Updated - Gutenberg block utility classes styles enqueue to module files (was placed under styles module and Utilities class)
- Updated - Gutenberg block utility classes to respect the with_block_classes condition (if disabled/enabled under /app.php config)
- Updated - core/image and core/search attribute styles removed and output inline to block supports
- Removed - Duotone SVG combine and styles/svg custom output (WP 6.3+ comes with WP_Duotone with improved conditional output)

v6.3.2
- Updated - replace mb_strpos instances with strpos to avoid fatal errors on some hostings
- Updated - hex_to_rgb function return mixed error on wp-themes preview

v6.3.1
- Updated - replaced all instances of deprecated wp_tinycolor_string_to_rgb usage with own function to convert hex to rgb/a
- Updated - add 'wecodeart/upgrade/finish' action for ability to hook modules/plugins actions into it
- Updated - bind 'support' key instead of wecodeart( 'intergrations' ) to access WeCodeArt\Support class
- Updated - social sharing pattern icons and text color and font
- Updated - removed unused JavaScript code for patterns (was implemented in Core)
- Updated - normalized core/home-link to use Navigation/Link class to render markup
- Updated - core/navigation to wrap core/buttons in li tag (the same as other: spacer/logo)
- Fixed - properly update installed modules options inside module uninstall function

v6.3.0
- Updated - Some of the patterns wording
- Fixed - issue with empty image source to be rendered as placeholder
- Fixed - fatal error in modules update check transient

v6.2.9
- Updated - core/group marquee variation logic with namespace attribute / deprecated old logic with block style